tests/reference/cpp-expr15-1661c0d.stderr
Traceback (most recent call last):
  File "$DIR/src/bin/../runtime/lpython_parser.py", line 9, in <module>
    a = ast.parse(input, type_comments=True)
  File "/home/lubis/miniforge3/envs/lp/lib/python3.10/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
KeyboardInterrupt
The command 'python $DIR/src/bin/../runtime/lpython_parser.py $DIR/src/bin/../runtime/lpython_builtin.py $DIR/src/bin/../runtime/lpython_builtin.py66DE361' failed.
semantic error: The file '$DIR/src/bin/../runtime/lpython_builtin.py' failed to parse
 --> tests/expr15.py:9:9
  |
9 |     x = complex(2, 2)
  |         ^^^^^^^^^^^^^ 
